--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/BdtEditor.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/BdtEditor.xaml
@@ -7,18 +7,18 @@
             <StackPanel Orientation="Vertical">
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelCdtLibraries">Choose CDT Library containing CDTs:</Label>
-                    <ComboBox ItemsSource="{Binding Path=Model.CandidateCdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxCdtLibraries" SelectionChanged="comboboxCdtLibraries_SelectionChanged"></ComboBox>
+                    <ComboBox KeyboardNavigation.TabIndex="0" ItemsSource="{Binding Path=Model.CandidateCdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxCdtLibraries" SelectionChanged="comboboxCdtLibraries_SelectionChanged"></ComboBox>
                 </DockPanel>
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelCdts">Choose CDT used to generate the BDT:</Label>
-                    <ComboBox ItemsSource="{Binding Path=Model.CandidateCdtNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxCdts" SelectionChanged="comboboxCdts_SelectionChanged" ></ComboBox>
+                    <ComboBox KeyboardNavigation.TabIndex="1" ItemsSource="{Binding Path=Model.CandidateCdtNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxCdts" SelectionChanged="comboboxCdts_SelectionChanged" ></ComboBox>
                 </DockPanel>
                 <GroupBox Header="Attributes" Margin="5,1,1,4" Height="325" >
                     <TabControl TabStripPlacement="Top" Margin="2,3,2,2" Name="tabControl" IsEnabled="False">
                         <TabItem Header="CON" Name="tabCon">
                             <TabItem.Content>
                                 <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateConItems}" Name="listboxCon">
+                                    <ListBox KeyboardNavigation.TabIndex="2" ItemsSource="{Binding Path=Model.CandidateConItems}" Name="listboxCon">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
@@ -38,8 +38,8 @@
                         <TabItem Header="SUPs" Name="tabSups">
                             <TabItem.Content>
                                 <DockPanel>
-                                    <CheckBox Margin="1,2,1,3" DockPanel.Dock="Top" Name="checkboxSups" Checked="checkboxSups_Checked" Unchecked="checkboxSups_Checked">Select all SUPs</CheckBox>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateSupItems}" Margin="0,2,0,0" Name="listboxSups">
+                                    <CheckBox KeyboardNavigation.TabIndex="3" Margin="1,2,1,3" DockPanel.Dock="Top" Name="checkboxSups" Checked="checkboxSups_Checked" Unchecked="checkboxSups_Checked">Select all SUPs</CheckBox>
+                                    <ListBox KeyboardNavigation.TabIndex="4" ItemsSource="{Binding Path=Model.CandidateSupItems}" Margin="0,2,0,0" Name="listboxSups">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
@@ -60,21 +60,21 @@
                 </GroupBox>
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtPrefix">Prefix used for the generated BDT:</Label>
-                    <TextBox Name="textboxBdtPrefix" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxBdtPrefix_TextChanged" IsEnabled="False"/>
+                    <TextBox KeyboardNavigation.TabIndex="5" Name="textboxBdtPrefix" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxBdtPrefix_TextChanged" IsEnabled="False"/>
                 </DockPanel>
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtName">Name of the generated BDT:</Label>
-                    <TextBox Name="textboxBdtName" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxBdtName_TextChanged" IsEnabled="False"/>
+                    <TextBox KeyboardNavigation.TabIndex="6" Name="textboxBdtName" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxBdtName_TextChanged" IsEnabled="False"/>
                 </DockPanel>
                 <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                     <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtLibraries">BDT Library used to store the BDT:</Label>
-                    <ComboBox ItemsSource="{Binding Path=Model.CandidateBdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxBdtLibraries" SelectionChanged="comboboxBdtLibraries_SelectionChanged"></ComboBox>
+                    <ComboBox KeyboardNavigation.TabIndex="7" ItemsSource="{Binding Path=Model.CandidateBdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxBdtLibraries" SelectionChanged="comboboxBdtLibraries_SelectionChanged"></ComboBox>
                 </DockPanel>
             </StackPanel>
         </GroupBox>
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,1,1,1">
-            <Button HorizontalAlignment="Center" Width="100" Name="buttonCreate" Margin="5,5,5,5" Height="23" Click="buttonCreate_Click" IsEnabled="False">C_reate BDT</Button>
-            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Height="23" Click="buttonClose_Click" IsCancel="True">_Close</Button>
+            <Button KeyboardNavigation.TabIndex="8" HorizontalAlignment="Center" Width="100" Name="buttonCreate" Margin="5,5,5,5" Height="23" Click="buttonCreate_Click" IsEnabled="False">C_reate BDT</Button>
+            <Button KeyboardNavigation.TabIndex="9" HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Height="23" Click="buttonClose_Click" IsCancel="True">_Close</Button>
         </StackPanel>
     </DockPanel>
 </Window>
