--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
@@ -1,7 +1,7 @@
 ﻿<Window    
     x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.AbieEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Height="627" Width="589" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="ABIE Editor" FontSize="11">
     <Canvas Name="canvas">
         <DockPanel Margin="2,5,5,5" Canvas.Bottom="0" Canvas.Left="0" Canvas.Right="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
@@ -157,6 +157,9 @@
                     <SolidColorBrush Color="Gray" Opacity="0.75"/>
                 </Rectangle.Fill>
             </Rectangle>
+            <Grid Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+            <TextBlock FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center">Loading ...</TextBlock>
+            </Grid>
         </Canvas>
     </Canvas>
 </Window>
