--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/TransformerUI.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/TransformerUI.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.Transformer"
+﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.TransformerUI"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:VIENNAAddInWpfUserControls="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
     Height="420" Width="478" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="Transformer Wizard" FontSize="11">
+    <Canvas Name="canvas">
     <DockPanel Margin="5,5,5,5">
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,10,5,5">
             <Button KeyboardNavigation.TabIndex="9" HorizontalAlignment="Left" Height="23" Name="buttonTransform" Width="175" Click="buttonTransform_Click">_Transform</Button>
@@ -39,7 +40,7 @@
                 <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                     <Label Height="23" HorizontalAlignment="Left" Width="130">Target XSD:</Label>
-                    <VIENNAAddInWpfUserControls:FileSelector KeyboardNavigation.TabIndex="5" Height="23" Name="targetXSD"  FileNameChanged="targetXSD_FileNameChanged" Width="300" />
+                    <VIENNAAddInWpfUserControls:FileSelector KeyboardNavigation.TabIndex="5" Height="23" Name="targetXSD"  FileNameChanged="targetXSD_FileNameChanged" Width="300" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
                 </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                         <Label Height="23" HorizontalAlignment="Left" Width="130">Output Directory:</Label>
@@ -50,4 +51,15 @@
             </GroupBox>
         </StackPanel>
     </DockPanel>
+        <Canvas Visibility="Collapsed" Name="innerCanvas" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+            <Rectangle Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="{Binding ElementName=innerCanvas, Path=ActualHeight}">
+                <Rectangle.Fill>
+                    <SolidColorBrush Color="Gray" Opacity="0.75"/>
+                </Rectangle.Fill>
+            </Rectangle>
+            <Grid Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+                <TextBlock FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center">Transforming ...</TextBlock>
+            </Grid>
+        </Canvas>
+    </Canvas>
 </Window>
